@@ -1263,3 +1263,4 @@ towny_prices_nation_tax: '&c    [Taxes] &2Town: &a%s &8| &2Peace: &a%s'
 #Added in 0.96
 msg_town_destroyed_by_nation_tax: '&bThe conquered town %s couldn''t pay the nation tax and has fallen.'
 msg_town_destroyed_by_nation_tax_multiple: '&bThe following conquered towns could not afford the nation tax and have fallen: '
+msg_your_town_was_exempt_from_the_nation_tax: '&bYour town was exempt from the nation tax.'
